add financial planning

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ pages:
         - 'me/English Personal Resume.md'
         - 'me/My Plan for finding Job.md'
         - 'me/Personal Pre-Work Record.md'
+        - 'me/My Financial Planning.md'
     - 'Tech': 
         - 'tech/Network Simulator 2 Installation Guide for Ubuntu.md'
         - 'tech/Learn STL In 30 Minutes.md'
