--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ pages:
         - 'me/My Plan for finding Job.md'
         - 'me/Personal Pre-Work Record.md'
         - 'me/My Financial Planning.md'
+        - 'me/How I create this blog.md'
     - 'Tech': 
         - 'tech/Network Simulator 2 Installation Guide for Ubuntu.md'
         - 'tech/Learn STL In 30 Minutes.md'
