--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ pages:
         - 'tech/Optimizing App Startup Time.md'
         - 'tech/OpenVPN on Raspberry Pi.md'
         - 'tech/swift on client and server.md'
+        - 'tech/my hardware.md'
     - 'life':
         - 'life/alipay-scan-fu-icon.md'
         - 'life/Renting in Beijing.md'
