add kotlin install scripts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ pages:
         - 'tech/OpenVPN on Raspberry Pi.md'
         - 'tech/swift on client and server.md'
         - 'tech/my hardware.md'
+        - 'tech/kotlin.md'
     - 'life':
         - 'life/alipay-scan-fu-icon.md'
         - 'life/Renting in Beijing.md'
