add the minecraft page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,5 +33,7 @@ pages:
         - 'life/Renting in Beijing.md'
     - 'music':
         - 'music/whistle.md'
+    - 'minecraft':
+        - 'minecraft/minecraft.md'
 
 theme: readthedocs
