add the page ffmpeg convert mp4 to gif

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,7 @@ pages:
         - 'tech/swift on client and server.md'
         - 'tech/my hardware.md'
         - 'tech/kotlin.md'
+        - 'tech/Convert MP4 to GIF With FFmpeg.md'
     - 'etc':
         - 'life/alipay-scan-fu-icon.md'
         - 'life/Renting in Beijing.md'
