--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -193,3 +193,4 @@ pages:
         - 'me/My Plan for finding Job.md'
         - 'me/Personal Pre-Work Record.md'
         - 'me/My Financial Planning.md'
+        - 'me/Life in Beijing.md'
