--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -194,4 +194,5 @@ pages:
         - 'me/Personal Pre-Work Record.md'
         - 'me/My Financial Planning.md'
         - 'me/Life in Beijing.md'
+        - 'me/jokerhub.md'
 
