add the tour plan to gu bei shui zhen

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -184,6 +184,7 @@ pages:
     - 'etc':
         - 'life/alipay-scan-fu-icon.md'
         - 'life/Renting in Beijing.md'
+        - 'life/Gu Bei Shui Zhen.md'
     - 'Music':
         - 'music/whistle.md'
     - 'Game':
