return the read the docs theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ edit_uri: "edit/master/docs/"
 # built-in theme
 # default: mkdocs
 #theme: "readthedocs"
-# theme: 'mkdocs'
+theme: 'mkdocs'
 
 
 # Lets you set a directory to a custom theme. 
@@ -51,7 +51,7 @@ edit_uri: "edit/master/docs/"
 # directory containing your configuration file, 
 # or it can be an absolute directory path.
 # default: null
-theme_dir: 'mkdocs_docskimmer'
+#theme_dir: 'mkdocs_docskimmer'
 #theme_dir: 'mkdocs_alabaster'
 #theme_dir: 'psinder'
 #theme_dir: 'mkdocs_windmill_dark'
