--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,7 +106,7 @@ site_dir: "site"
 
 # Set the copyright information to be included in the documentation by the theme.
 # default: null
-copyright: "created by wangzhizhou"
+copyright: "Created by Wang Zhizhou"
 
 
 # Set the remote name to push to when using gh-deploy to deploy to Github Pages. 
