--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,8 +82,8 @@ site_dir: "site"
 # Set a list of JavaScript files in your docs_dir to be included by the theme. 
 # See the example in extra_css for usage.
 # default: []
-extra_javascript:
-    - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+#extra_javascript:
+    #- https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
 # Set a list of templates in your docs_dir to be built by MkDocs. 
 # To see more about writing templates for MkDocs read the documentation 
@@ -148,8 +148,8 @@ strict: true
 #    - toc:
 #        permalink: True
 #    - sane_lists
-markdown_extensions:
-    - mdx_math
+#markdown_extensions:
+#    - mdx_math
 
 plugins:
     - search
