--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 python_markdown_math
-Pygments 
-setuptools
-docutils 
-mock 
-pillow 
-alabaster 
+Pygments==2.2.0
+setuptools<40 
+docutils==0.13.1 
+mock==1.0.1
+pillow==2.6.1 
+alabaster>=0.7,<0.8,!=0.7.5 
 commonmark==0.5.4 
-recommonmark  
-mkdocs
+recommonmark==0.4.0 
+mkdocs==0.15
