--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 python_markdown_math
+mkdocs-bootstrap
+mkdocs-bootswatch
 Pygments==2.2.0
 setuptools<40 
 docutils==0.13.1 
@@ -7,4 +9,4 @@ pillow==2.6.1
 alabaster>=0.7,<0.8,!=0.7.5 
 commonmark==0.5.4 
 recommonmark==0.4.0 
-mkdocs==0.15
+mkdocs
