--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -204,6 +204,7 @@ pages:
             - 'tech/kotlin.md'
             - 'tech/Convert MP4 to GIF With FFmpeg.md'
             - 'tech/jupyterhub.md'
+            - 'tech/tech share.md'
         - 'etc':
             - 'life/alipay-scan-fu-icon.md'
             - 'life/Renting in Beijing.md'
@@ -274,5 +275,6 @@ pages:
             - 'me/Personal Pre-Work Record.md'
             - 'me/My Financial Planning.md'
             - 'me/Life in Beijing.md'
-            - 'me/jokerhub.md'    
+            - 'me/jokerhub.md'   
+            - 'me/job review.me' 
         - 'Blog': 'How I create this blog.md'
